--- a/src/components/ChatlistItem.css
+++ b/src/components/ChatlistItem.css
@@ -5,6 +5,14 @@
     height: 70px;
 }
 
+.chatListItem:hover{
+    background-color: #f5f5f5
+}
+
+.chatListItem.active{
+    background-color: #ebebeb;
+}
+
 .chatListItem--avatar{
     width: 50px;
     height: 50px;
